--- a/web/components/tabs/index_tabs.html
+++ b/web/components/tabs/index_tabs.html
@@ -1,17 +1,21 @@
-<!DOCTYPE html><html lang="en"><head>
-  <title>Angular 2 Bootstrap</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Angular2 Bootstrap</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Angular2 Bootstrap">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+  <link rel="author" href="https://github.com/luisvt/ng2_strap/graphs/contributors">
+
   <!--link to bootstrap.css-->
   <link rel="stylesheet" href="packages/ng_bootstrap/all.css">
-  <link rel="stylesheet" href="assets/css/style.css">
 
-  <script async="" src="index.dart.js"></script>
-  
+  <script type="application/dart" src="main.dart"></script>
+  <script src="packages/browser/dart.js"></script>
 
   <style media="screen">
     .header {
@@ -28,10 +32,8 @@
   </style>
 </head>
 <body>
-<app>
+<tabs-demo>
   Loading...
-</app>
-<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-
-
-</body></html>
+</tabs-demo>
+</body>
+</html>
